--- a/rag/templates/cr-io-secret.yaml
+++ b/rag/templates/cr-io-secret.yaml
@@ -1,9 +1,9 @@
-{{ if .Values.global.imagePullSecret.create }}
+{{ if .Values.shared.imagePullSecret.create }}
 apiVersion: v1
 data:
     .dockerconfigjson: {{ include "rag.dockerconfigjson" . }}
 kind: Secret
 metadata:
-    name: {{ .Values.global.imagePullSecret.name }}
+    name: {{ .Values.shared.imagePullSecret.name }}
 type: kubernetes.io/dockerconfigjson
 {{- end }}
