--- a/rag/templates/backend/certificate.yaml
+++ b/rag/templates/backend/certificate.yaml
@@ -1,11 +1,11 @@
-{{- if $.Values.global.ssl }}
+{{- if $.Values.shared.ssl }}
 apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: rag-certificate
 spec:
   dnsNames:
-    {{- range .Values.global.config.dns }}
+    {{- range .Values.shared.config.dns }}
     - {{.}}
     {{- end }}
   secretName: tls-certificate
