--- a/rag/templates/frontend/secrets.yaml
+++ b/rag/templates/frontend/secrets.yaml
@@ -1,3 +1,4 @@
+{{- if $.Values.features.frontend.enabled }}
 apiVersion: v1
 data:
   {{- range $key, $value := .Values.frontend.secrets.viteAuth }}
@@ -7,3 +8,4 @@ kind: Secret
 metadata:
   name: vite-auth
 type: Opaque
+{{- end }}
