feat: Add a confluence loader to rag infrastructure

--- a/rag/templates/admin-backend/configmap.yaml
+++ b/rag/templates/admin-backend/configmap.yaml
@@ -24,3 +24,12 @@ data:
   {{- range $key, $value := .Values.adminBackend.envs.summarizer }}
   {{ $key }}: {{ $value | quote }}
   {{- end }}
+---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: {{ template "configmap.confluenceLoaderName" . }}
+data:
+  {{- range $key, $value := .Values.adminBackend.envs.confluenceLoader }}
+  {{ $key }}: {{ $value | quote }}
+  {{- end }}
