--- a/rag/templates/admin-backend/deployment.yaml
+++ b/rag/templates/admin-backend/deployment.yaml
@@ -102,6 +102,8 @@ spec:
               name: {{ template "configmap.stackitVllmName" . }}
           - configMapRef:
               name: {{ template "configmap.pdfextractorName" . }}
+          - configMapRef:
+              name: {{ template "configmap.confluenceLoaderName" . }}
           - secretRef:
               name: {{ template "secret.alephalphaName" . }}
           - secretRef:
@@ -114,6 +116,8 @@ spec:
               name: {{ template "secret.s3Name" . }}
           - secretRef:
               name: {{ template "secret.stackitVllmName" . }}
+          - secretRef:
+              name: {{ template "secret.confluenceLoaderName" . }}
         env:
           - name: PYTHONPATH
             value: {{ .Values.adminBackend.pythonPathEnv.PYTHONPATH }}
