--- a/rag/templates/backend/secrets.yaml
+++ b/rag/templates/backend/secrets.yaml
@@ -55,7 +55,7 @@ data:
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ template "secret.openaiName" . }}
+  name: {{ template "secret.ragasName" . }}
 type: Opaque
 data:
-  OPENAI_API_KEY: {{ .Values.backend.secrets.openai.apiKey | b64enc }}
+  RAGAS_OPENAI_API_KEY: {{ .Values.backend.secrets.ragas.openaiApikey | b64enc }}
