fix: creation of pull secret

--- a/rag/Chart.yaml
+++ b/rag/Chart.yaml
@@ -23,6 +23,7 @@ dependencies:
 - name: keydb
   repository: https://enapter.github.io/charts/
   version: "0.48.0"
+  condition: features.keydb.enabled
 - name: ollama
   alias: ollama
   version: 0.29.1
