--- a/rag/templates/secrets.yaml
+++ b/rag/templates/secrets.yaml
@@ -6,3 +6,13 @@ type: Opaque
 data:
   S3_ACCESS_KEY_ID: {{ .Values.shared.secrets.s3.accessKey | b64enc }}
   S3_SECRET_ACCESS_KEY: {{ .Values.shared.secrets.s3.secretKey | b64enc }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ template "secret.usecaseName" . }}
+type: Opaque
+data:
+  {{- range $key, $value := .Values.shared.secrets.usecase }}
+  {{ $key }}: {{ $value | b64enc }}
+  {{- end }}
