chore: update langfuse image tag and make image pull secret optional

--- a/rag/templates/backend/deployment.yaml
+++ b/rag/templates/backend/deployment.yaml
@@ -23,8 +23,10 @@ spec:
           emptyDir: {}
         - name: tmp-dir
           emptyDir: {}
+      {{- if .Values.shared.imagePullSecret -}}
       imagePullSecrets:
         - name: {{ .Values.shared.imagePullSecret.name }}
+      {{- end }}
       initContainers:
       - name: init-permissions
         image: busybox
