--- a/rag/templates/pull-secret.yaml
+++ b/rag/templates/pull-secret.yaml
@@ -1,3 +1,4 @@
+{{ if .Values.shared.imagePullSecret }}
 {{ if .Values.shared.imagePullSecret.create }}
 apiVersion: v1
 data:
@@ -6,4 +7,5 @@ kind: Secret
 metadata:
     name: {{ .Values.shared.imagePullSecret.name }}
 type: kubernetes.io/dockerconfigjson
+{{- end }}
 {{- end }}
