fix: production deployment issues

--- a/rag/templates/backend/deployment.yaml
+++ b/rag/templates/backend/deployment.yaml
@@ -23,7 +23,7 @@ spec:
           emptyDir: {}
         - name: tmp-dir
           emptyDir: {}
-      {{- if .Values.shared.imagePullSecret -}}
+      {{- if .Values.shared.imagePullSecret }}
       imagePullSecrets:
         - name: {{ .Values.shared.imagePullSecret.name }}
       {{- end }}
