--- a/rag/templates/extractor/deployment.yaml
+++ b/rag/templates/extractor/deployment.yaml
@@ -25,7 +25,7 @@ spec:
           emptyDir: {}
         - name: nltk-data-dir
           emptyDir: {}
-      {{- if .Values.shared.imagePullSecret -}}
+      {{- if .Values.shared.imagePullSecret }}
       imagePullSecrets:
       - name: {{ .Values.shared.imagePullSecret.name }}
       {{- end }}
