--- a/rag/templates/admin-backend/deployment.yaml
+++ b/rag/templates/admin-backend/deployment.yaml
@@ -23,9 +23,9 @@ spec:
           emptyDir: {}
         - name: tmp-dir
           emptyDir: {}
-      {{- if .Values.shared.imagePullSecret -}}
+      {{- if .Values.shared.imagePullSecret }}
       imagePullSecrets:
-          - name: {{ .Values.shared.imagePullSecret.name }}
+        - name: {{ .Values.shared.imagePullSecret.name }}
       {{- end }}
       initContainers:
       - name: init-permissions
