--- a/rag/templates/frontend/deployment.yaml
+++ b/rag/templates/frontend/deployment.yaml
@@ -51,7 +51,7 @@ spec:
           - secretRef:
               name: "vite-auth"
           {{- end }}
-      {{- if .Values.shared.imagePullSecret -}}
+      {{- if .Values.shared.imagePullSecret }}
       imagePullSecrets:
       - name: {{ .Values.shared.imagePullSecret.name }}
       {{- end }}
