--- a/server-setup/base-setup/templates/cert-issuer.yaml
+++ b/server-setup/base-setup/templates/cert-issuer.yaml
@@ -8,7 +8,7 @@ spec:
    server: https://acme-v02.api.letsencrypt.org/directory
    #server: https://acme-staging-v02.api.letsencrypt.org/directory
    # Email address used for ACME registration
-   email: melvin.klein@mmmake.com
+   email: data-ai-consulting@stackit.cloud
    # Name of a secret used to store the ACME account private key
    privateKeySecretRef:
      name: letsencrypt-cluster-issuer-key
