--- a/rag/values.yaml
+++ b/rag/values.yaml
@@ -275,6 +275,7 @@ adminBackend:
     confluenceLoader:
       CONFLUENCE_URL: ""
       CONFLUENCE_SPACE_KEY: ""
+      CONFLUENCE_DOCUMENT_NAME: ""
     keyValueStore:
       USECASE_KEYVALUE_PORT: 6379
       USECASE_KEYVALUE_HOST: "rag-keydb"
